test/classes/deitz/test_union2.good
x: (-1)
x: (ERROR: Union type error (test_union2.chpl:4)
